--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Mario Pitta</title>
 </head>
@@ -126,31 +127,68 @@
             </li>
         </ul>
         <div class="hard-skills-div">
-            <div class="p-3 row d-flex justify-content-around">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="HTML 5" aria-label="HTML 5">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="CSS" aria-label="CSS">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-plain.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="JavaScript" aria-label="JavaScript">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/angularjs/angularjs-plain.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="ANGULAR
+            <div class="p-3 mt-2  row d-flex justify-content-center">
+                <span class="text-center">Front End Skills:</span>
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="HTML 5" aria-label="HTML 5">
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="CSS" aria-label="CSS">
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-plain.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="JavaScript" aria-label="JavaScript">
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/typescript/typescript-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="TypeScript" aria-label="TypeScript">
+                <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/angularjs/angularjs-plain.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="ANGULAR
            " aria-label="ANGULAR">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/ionic/ionic-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="IONIC
+                <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/ionic/ionic-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="IONIC
            " aria-label="IONIC">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="BOOTSTRAP" aria-label="BOOTSTRAP">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/typescript/typescript-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="TypeScript" aria-label="TypeScript">
-                <!-- </div>
-            <div class="p-0 d-flex justify-content-between"> -->
-                <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/mysql/mysql-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="MySQL
-           " aria-label="MySQL">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/figma/figma-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="FIGMA" aria-label="FIGMA">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/postgresql/postgresql-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="POSTGRESQL
-           " aria-label="POSTGRESQL">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/sqlite/sqlite-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="SQLITE
-           " aria-label="SQLITE">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/amazonwebservices/amazonwebservices-plain-wordmark.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="AWS" aria-label="AWS">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/nodejs/nodejs-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="NODE
-           " aria-label="NODE">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/docker/docker-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="DOCKER
-           " aria-label="DOCKER">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="REACT JS
+  " aria-label="REACT JS">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vuejs/vuejs-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="VUEJS
+  " aria-label="VueJS">
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="BOOTSTRAP" aria-label="BOOTSTRAP">
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/figma/figma-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="FIGMA" aria-label="FIGMA">
+
             </div>
+            <div class="p-3  mt-2 row d-flex justify-content-center">
+                <span class="text-center">Database Skills:</span>
+
+
+                <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/mysql/mysql-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="MySQL
+           " aria-label="MySQL">
+
+                <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/postgresql/postgresql-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="POSTGRESQL
+           " aria-label="POSTGRESQL">
+                <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/sqlite/sqlite-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="SQLITE
+           " aria-label="SQLITE">
+
+            </div>
+
+
+        </div>
+
+        <div class="p-3 mt-2 row d-flex justify-content-center">
+            <span class="text-center">Backend Skills:</span>
+
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nestjs/nestjs-plain.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="NESTJS
+                " aria-label="NestJS">
+
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="EXPRESS
+           " aria-label="EXPRESS">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="C#
+           " aria-label="C#">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/spring/spring-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="SPRING
+           " aria-label="SPRING">
+            <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/nodejs/nodejs-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="NODE
+           " aria-label="NODE">
+            <br>
+        </div>
+        <div class="p-3 row d-flex justify-content-center">
+            <span class="text-center">DevOps Skills:</span>
+
+            <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/docker/docker-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="DOCKER
+           " aria-label="DOCKER">
+
+            <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/amazonwebservices/amazonwebservices-plain-wordmark.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="AWS" aria-label="AWS">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/googlecloud/googlecloud-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="GCP" aria-label="GCP">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="GIT" aria-label="GIT">
+
+        </div>
         </div>
     </section>
 
@@ -274,18 +312,10 @@
                         <div class="carousel-caption d-none d-md-block">
                             <h5>MvK Cardapio</h5>
                             <p>A complete application for managing any business establishment in the food sector.</p>
-                            <!-- <p class="center">
-                                Dynamic visualization allows different actions by different types of users, being them, administrators and customers.</p> -->
+
                             <a class="btn btn-warning" href="https://mvk-cardapio.up.railway.app/#/" target="_blank">View Demo</a>
                             <a class="btn btn-light" href="https://github.com/mario-pitta/mvk-pizza" target="_blank">Source Code</a>
-                            <!-- <div class="d-flex center justify-content-center">
-                                <a href="https://github.com/mario-pitta/mvk-pizza">
-                                    <button class="btn btn-dark align-items-center d-flex w-25 position-relative">
-                                        <img src="assets/img/github-icon.png" alt="github-icon">
-                                        <span class="text-center">GITHUB</span>
-                                    </button>
-                                </a>
-                            </div> -->
+
                         </div>
                     </div>
 
