--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta property="og:image" content="./assets/img/me.jpeg">
+    <meta property="og:description" content="Portifólio de Mario Pitta">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
@@ -138,31 +141,23 @@
   " aria-label="VueJS">
                 <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="BOOTSTRAP" aria-label="BOOTSTRAP">
                 <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/figma/figma-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="FIGMA" aria-label="FIGMA">
-
             </div>
+
             <div class="p-3  mt-2 row d-flex justify-content-center">
                 <span class="text-center">Database Skills:</span>
-
-
                 <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/mysql/mysql-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="MySQL
            " aria-label="MySQL">
-
                 <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/postgresql/postgresql-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="POSTGRESQL
            " aria-label="POSTGRESQL">
                 <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/sqlite/sqlite-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="SQLITE
            " aria-label="SQLITE">
-
             </div>
-
-
         </div>
 
         <div class="p-3 mt-2 row d-flex justify-content-center">
             <span class="text-center">Backend Skills:</span>
-
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nestjs/nestjs-plain.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="NESTJS
                 " aria-label="NestJS">
-
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="EXPRESS
            " aria-label="EXPRESS">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="C#
@@ -173,23 +168,20 @@
            " aria-label="NODE">
             <br>
         </div>
+
         <div class="p-3 row d-flex justify-content-center">
             <span class="text-center">DevOps Skills:</span>
-
             <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/docker/docker-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="DOCKER
            " aria-label="DOCKER">
-
             <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/amazonwebservices/amazonwebservices-plain-wordmark.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="AWS" aria-label="AWS">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/googlecloud/googlecloud-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="GCP" aria-label="GCP">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="" class="skill-logo " data-toggle="tooltip" data-placement="top" title="GIT" aria-label="GIT">
-
         </div>
         </div>
     </section>
 
     <section id="experiences" class="container mt-5 p-5">
         <p class="title"><strong>Experiences</strong></p>
-
         <div class="timeline">
             <div class="tl-container left">
                 <div class="content">
@@ -302,15 +294,12 @@
                         <div class="d-flex justify-content-between" alt="First slide">
                             <img class="carousel-img d-block w-25" src="./assets/img/mvk-pizza home screen mobile.png" alt="First slide">
                             <img class="carousel-img d-block w-75" src="./assets/img/login-screen.png" alt="First slide">
-
                         </div>
                         <div class="carousel-caption d-none d-md-block">
                             <h5>MvK Cardapio</h5>
                             <p>A complete application for managing any business establishment in the food sector.</p>
-
                             <a class="btn btn-warning" href="https://mvk-cardapio.up.railway.app/#/" target="_blank">View Demo</a>
                             <a class="btn btn-light" href="https://github.com/mario-pitta/mvk-pizza" target="_blank">Source Code</a>
-
                         </div>
                     </div>
 
