:bug: new meta tags

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta property="og:title" content="Conheça Mario Pitta">
+    <meta property="og:description" content="Desenvolvedor Full Stack pronto para tornar sua idea, uma realidade lucrativa!">
     <meta property="og:image" content="./assets/img/me.jpeg">
-    <meta property="og:description" content="Portifólio de Mario Pitta">
+    <!-- <meta property="og:url" content="URL do seu Portfólio"> -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
