:bug: adding img on twitter tag

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Seja bem-vindo ao meu mundo de criação e inovação! Com mais de 6 anos de experiência como desenvolvedor full stack, estou aqui para transformar suas ideias em soluções digitais de alto impacto. Explore meu portfólio e descubra como posso ajudar a trazer sua visão para a realidade digital.">
     <meta name="twitter:description" content="Descrição personalizada do seu Portfólio">
-    <meta name="twitter:image" content="URL da imagem a ser exibida">
+    <meta name="twitter:image" content="https://mariopitta.vercel.app/assets/img/me.jpeg">
 
 
     <!-- <meta property="og:url" content="URL do seu Portfólio"> -->
