--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta property="og:description" content="Seja bem-vindo ao meu mundo de criação e inovação! Com mais de 6 anos de experiência como desenvolvedor full stack, estou aqui para transformar suas ideias em soluções digitais de alto impacto. Explore meu portfólio e descubra como posso ajudar a trazer sua visão para a realidade digital.">
     <meta property="og:image" content="https://mariopitta.vercel.app/assets/img/me.jpeg">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Seja bem-vindo ao meu mundo de criação e inovação! Com mais de 6 anos de experiência como desenvolvedor full stack, estou aqui para transformar suas ideias em soluções digitais de alto impacto. Explore meu portfólio e descubra como posso ajudar a trazer sua visão para a realidade digital.">
-    <meta name="twitter:description" content="Descrição personalizada do seu Portfólio">
+    <meta name="twitter:title" content="Mario Pitta - Desenvolvedor Full Stack com 6+ Anos de Experiência - Transformando Ideias em Soluções Digitais">
+    <meta name="twitter:description" content="Seja bem-vindo ao meu mundo de criação e inovação! Com mais de 6 anos de experiência como desenvolvedor full stack, estou aqui para transformar suas ideias em soluções digitais de alto impacto. Explore meu portfólio e descubra como posso ajudar a trazer sua visão para a realidade digital.">
     <meta name="twitter:image" content="https://mariopitta.vercel.app/assets/img/me.jpeg">
 
 
