--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta property="og:title" content="Mario Pitta - Desenvolvedor Full Stack com 6+ Anos de Experiência - Transformando Ideias em Soluções Digitais">
-    <meta property="og:description" content="Seja bem-vindo ao meu mundo de criação e inovação! Com mais de 6 anos de experiência como desenvolvedor full stack, estou aqui para transformar suas ideias em soluções digitais de alto impacto. Explore meu portfólio e descubra como posso ajudar a trazer sua visão para a realidade digital.">
+    <meta property="og:title" content="Mario Pitta - Desenvolvedor Full Stack - Transformando Ideias em Soluções Digitais">
+    <meta property="og:description" content="Seja bem-vindo ao meu mundo de criação e inovação! Estou aqui para te ajudar a transformar suas ideias em soluções digitais de alto impacto. Explore meu portfólio e descubra como posso ajudar a trazer sua visão para a realidade digital.">
     <meta property="og:image" content="https://mariopitta.vercel.app/assets/img/me.jpeg">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Mario Pitta - Desenvolvedor Full Stack com 6+ Anos de Experiência - Transformando Ideias em Soluções Digitais">
-    <meta name="twitter:description" content="Seja bem-vindo ao meu mundo de criação e inovação! Com mais de 6 anos de experiência como desenvolvedor full stack, estou aqui para transformar suas ideias em soluções digitais de alto impacto. Explore meu portfólio e descubra como posso ajudar a trazer sua visão para a realidade digital.">
+    <meta name="twitter:title" content="Mario Pitta - Desenvolvedor Full Stack - Transformando Ideias em Soluções Digitais">
+    <meta name="twitter:description" content="Seja bem-vindo ao meu mundo de criação e inovação! Estou aqui para te ajudar a transformar suas ideias em soluções digitais de alto impacto. Explore meu portfólio e descubra como posso ajudar a trazer sua visão para a realidade digital.">
     <meta name="twitter:image" content="https://mariopitta.vercel.app/assets/img/me.jpeg">
 
 
